--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.2",
+    "react-youtube": "^10.1.0",
     "reactstrap": "^9.2.0",
     "remixicon": "^2.5.0",
     "web-vitals": "^2.1.4"
