--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.2",
+    "react-share": "^4.4.1",
     "react-toastify": "^9.1.3",
     "react-youtube": "^10.1.0",
     "reactstrap": "^9.2.0",
