--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-parallax": "^3.5.1",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.2",
