--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-parallax": "^3.5.1",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.2",
