--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.3.2",
     "firebase": "^10.4.0",
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-parallax": "^3.5.1",
