--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
+    "react-icons": "^4.11.0",
     "react-parallax": "^3.5.1",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.2",
